update logistic dignostics coho

--- a/caseStudyWP/03-chap3.Rmd
+++ b/caseStudyWP/03-chap3.Rmd
@@ -213,9 +213,10 @@ knitr::include_graphics("figure/coho-CU-EscpSeries-wMultiStatus_Ricker_priorCap.
 ```
 
 As a point of comparison, if a proportion-based LRP was based on all CUs being above the IFCRT distributional target, the LRP would have been breached in 4 of the 21 years between 2000 and 2020. Eight of the 11 sub-populations had generational average escapement drop below the 1000 spawner threshold in one or more years (Figure \@ref(fig:coho-Subpop-timeseries)). Sub-populations tended to differ in which years they dropped below the 1000 spawner threshold, which meant that the distributional target at least half of the subpopulations within each CU with greater than 1000 fish was more often met than not. All 11 subpopulations had generational average spawning abundances above 1000 spawners in 2020, indicating that the stock would be well above a proportion-based LRP based on the IFCRT-distributional target (Figure \@ref(fig:coho-Subpop-timeseries)).
-<!--CH: i wonder if this plot of 11 subpops could be grouped into the 5 CUs, to more easily show the years when half of the subpops within each CU were < orange horiz line. It's hard to see visually how only 4 years have a breach of the LRP based on this plot-->
+<!--CH: i wonder if this plot of 11 subpops could be grouped into the 5 CUs, to more easily show the years when half of the subpops within each CU were < orange horiz line. It's hard to see visually how only 4 years have a breach of the LRP based on this plot
+CW: I attempted to do that. not too sure about the result though-->
 
-```{r coho-Subpop-timeseries, fig.cap="Escapement time series for 11 subpopulations of Interior Fraser Coho shown as annual escapements (lines) and 3-year geometric mean escapements (dots). Gray dots shows years in which the 3-year geometric mean escapement was above the 1000 fish threshold used to assess distributional status, while red dots show years in which the 1000 fish threshold was not met.  CUs to which each subpopulation belong to are shown in Table 1.", warning=FALSE, echo=FALSE, fig.align="center"}
+```{r coho-Subpop-timeseries, fig.cap="Escapement time series for 11 subpopulations of Interior Fraser Coho shown as annual escapements (lines) and 3-year geometric mean escapements (dots). Gray dots shows years in which the 3-year geometric mean escapement was above the 1000 fish threshold used to assess distributional status, while red dots show years in which the 1000 fish threshold was not met. CUs are represented by columns with labels long the y axis.", warning=FALSE, echo=FALSE, fig.align="center"}
 knitr::include_graphics("figure/coho-Subpop-EscpSeries-wStatus.png")
 ```
 
@@ -224,7 +225,7 @@ knitr::include_graphics("figure/coho-Subpop-EscpSeries-wStatus.png")
 
 ### Methods{#logistic}
 
-We present aggregate abundance-based LRPs derived using logistic regressions with two of the Interior Fraser Coho benchmarks considered: $S_{gen}$ and the IFCRT-distributional target. Because two different spawner recruit models were used to estimate $S_{gen}$, we distinguish these models as 'Logistic:Sgen-Ricker' and 'Logistic:Sgen-priorCap' for the Ricker and Ricker_priorCap models, respectively. We use the label 'Logistic:IFCRT' to denote the case in which the IFCRT distributional target was used to develop an LRP.  See Section \@ref(logisticMethods) for an overview of the approach used to calculate aggregate abundance-based LRPs using logistic regression.
+We present aggregate abundance-based LRPs derived using logistic regressions with two of the Interior Fraser Coho benchmarks considered: $S_{gen}$ and the IFCRT-distributional target. Because two different spawner recruit models were used to estimate $S_{gen}$, we distinguish these models as 'Logistic:Sgen-Ricker' and 'Logistic:Sgen-priorCap' for the Ricker and Ricker_priorCap models, respectively. We use the label 'Logistic:IFCRT' to denote the case in which the IFCRT distributional target was used to develop the aggregate abundance logistic regression-based LRP.  See Section \@ref(logisticMethods) for an overview of the approach used to calculate aggregate abundance-based LRPs using logistic regression.
 
 
 When estimating logistic regression LRPs using $S_{gen}$, we used an integrated modelling approach in which CU-level $S_{gen}$ and the SMU-level LRP were simultaneously estimated. The integrated Sgen-LRP models had two components:  
@@ -234,7 +235,7 @@ When estimating logistic regression LRPs using $S_{gen}$, we used an integrated 
 (ii)	A logistic regression model fit to aggregated data to estimate the LRP as the aggregate abundance that has historically been associated with a specified probability of all CUs being above Sgen (Equations \@ref(eq:logistic) - \@ref(eq:logisticLRP))
 
 
-We initially considered a third version of the logistic regression model, in which we used the rapid multidimensional scanning tool to characterize CU status. Preliminary model evaluations led us to exclude this model due to poor fit. There were two factors limiting the establishment of a statistical relationship between multidimensional estimates of CU status and aggregate spawner abundance.  First, the rapid multidimensional scanning tool relies on generational mean (smoothed abundances) to assess status of individual CUs against benchmarks, while our logistic regression approach uses raw (unsmoothed) aggregate abundance as a predictor variable. As a result, when logistic regressions were fit to CU status estimates from the multidimensional tool, there was a mismatch in the timing of abundance highs and lows.<!--CH: suggestion to focus entirely on weaker or non-existent relationship due to autocorrelation instead of the mixmatch. The mixmatch doesn't really matter for logsitic regression (and, a priori it's not immediately clear which one would be better, smoothed or unsmoothed), but the non-existent relationship does matter-->. This mismatch lead to a weak/non-existent relationship between SMU status and the raw (not smoothed) abundances. Using the generational mean of aggregate abundance as the predictor variable in the logistical regression fit instead of raw, annual abundance values introduced considerable autocorrelation in statuses. Future explorations of aggregate abundance logistic regression-based LRPs based on the rapid multidimensional scanning tool could account for the autocorrelation by including an AR(1) covariance structure. However, longer time-series and a wider spread of the data would be required to compensate for the additional parameter in the model. 
+We initially considered a third version of the logistic regression model, in which we used the rapid multidimensional scanning tool to characterize CU status. Preliminary model evaluations led us to exclude this model due to poor fit. There were two factors limiting the establishment of a statistical relationship between multidimensional estimates of CU status and aggregate spawner abundance.  First, the rapid multidimensional scanning tool relies on generational mean (smoothed abundances) to assess status of individual CUs against benchmarks, while our logistic regression approach uses raw (unsmoothed) aggregate abundance as a predictor variable. As a result, when logistic regressions were fit to CU status estimates from the multidimensional tool, there was a mismatch in the timing of abundance highs and lows.<!--CH: suggestion to focus entirely on weaker or non-existent relationship due to autocorrelation instead of the mixmatch. The mixmatch doesn't really matter for logsitic regression (and, a priori it's not immediately clear which one would be better, smoothed or unsmoothed), but the non-existent relationship does matter--> <!--CW: I am a bit confused, I think that the non-existent relationship happens because of the mismatch between the raw abundances and status below benchmark based on smoothed abundances, i.e. the raw abundance is high when status is red and low when status is not (yet) red  -->. This mismatch lead to a weak/non-existent relationship between SMU status and the raw (not smoothed) abundances. Using the generational mean of aggregate abundance as the predictor variable in the logistical regression fit instead of raw, annual abundance values introduced considerable autocorrelation in statuses. Future explorations of aggregate abundance logistic regression-based LRPs based on the rapid multidimensional scanning tool could account for the autocorrelation by including an AR(1) covariance structure. However, longer time-series and a wider spread of the data would be required to compensate for the additional parameter in the model. 
 
 The second limiting factor in establishing a statistical relationship between rapid multidimensional estimates of CU status and aggregate spawner abundance is that the rapid multidimensional scanning tool includes criteria that are not continuously tied to the CU abundance. For example, CU status can be determined based on trends, which is not congruent with logistic regression goal of identifying underlying relationship between aggregate abundance and CU statuses. In addition, the rapid multidimensional scanning tool includes absolute abundance thresholds (e.g. generational mean should be above 1500 fish) that are not proportional to the size of a CU. These absolute benchmarks introduce a disconnect between the SMU abundance and status, even when there is high correlation between CUs, because small CUs will be more likely to be below the absolute threshold despite high aggregate abundances.
 
@@ -260,20 +261,30 @@ where $nCUs$ is the number of CUs being used (3 or 4) and $LRP'_t$ is the LRP ca
 
 Logistic regression model fits in 2020 from the integrated Logistic:Sgen-Ricker and Logistic:Sgen-priorCap models are shown in Figures \@ref(fig:coho-IM-logisticFit2020) and \@ref(fig:coho-IMCap-logisticFit2020), respectively. The logistic regression model fit to status estimates based on the IFCRT-distributional benchmark is shown in Figure \@ref(fig:coho-Distr-logisticFit2020).  
 
-All three logistic regression-based LRP methods were able to converge on a solution in 2020. Resulting LRPs for different *p* thresholds are shown on the regression curves, as well as in Table \@ref(tab:logisticLRPs2020). There was considerable uncertainty around predicted curves as seen in the large areas of gray shading in Figures \@ref(fig:coho-IM-logisticFit2020) - \@ref(fig:coho-Distr-logisticFit2020).  
+All three logistic regression-based LRP methods were able to converge on a solution in 2020. Resulting LRPs for different *p* thresholds are shown on the regression curves, as well as in Table \@ref(tab:logisticLRPs2020). There was considerable uncertainty around predicted curves as seen in the large areas of gray shading in Figure \@ref(fig:coho-IM-logisticFit2020).  
 
-```{r coho-IM-logisticFit2020, fig.cap="Logistic regression fit from the integrated Logistic:Sgen-Ricker LRP model using data from 1998 - 2020. The yellow vertical line shows the LRP estimate based on the requirement of a 50\\% probability of all CUs being above Sgen, while the yellow shaded region shows the associated 95\\% confidence interval around the LRP. LRPs (MLE estimates only; no confidence intervals) for three alternative probability thresholds, 66\\%, 90\\%, and 99\\%, are shown in blue, green, and orange, respectively.", warning=FALSE, echo=FALSE, out.width = '50%', fig.align="center"}
-knitr::include_graphics("figure/coho-IM2020-LogisticLRP.png")
+
+
+```{r coho-IM-logisticFit2020, fig.cap="Logistic regression fit from the three logistic regression models: Logistic:Sgen-Ricker, Logistic:Sgen-priorCap and Logistic:IFCRT LRP model using data from 1998 - 2020. The yellow vertical line shows the LRP estimate based on the requirement of a 50\\% probability of all CUs being above Sgen, while the yellow shaded region shows the associated 95\\% confidence interval around the LRP. LRPs (MLE estimates only; no confidence intervals) for three alternative probability thresholds, 66\\%, 90\\%, and 99\\%, are shown in blue, green, and orange, respectively.", warning=FALSE, echo=FALSE, out.width = '50%', fig.align="center"}
+knitr::include_graphics("figure/coho-all-LogisticLRP.png")
 ```
+
+
+<!--
+cw: Combined all these figures in one multipanel as per Brendan's suggestion
+{r coho-IM-logisticFit2020, fig.cap="Logistic regression fit from the integrated Logistic:Sgen-Ricker LRP model using data from 1998 - 2020. The yellow vertical line shows the LRP estimate based on the requirement of a 50\\% probability of all CUs being above Sgen, while the yellow shaded region shows the associated 95\\% confidence interval around the LRP. LRPs (MLE estimates only; no confidence intervals) for three alternative probability thresholds, 66\\%, 90\\%, and 99\\%, are shown in blue, green, and orange, respectively.", warning=FALSE, echo=FALSE, out.width = '50%', fig.align="center"}
+knitr::include_graphics("figure/coho-IM2020-LogisticLRP.png")
+
+-->
   <!--CH: maybe I should use the same colouring for LRPs at 50, 66, 90, 99. Can you let me know what colours those are?-->
   
-When the Logistic:Sgen-Ricker model was used, aggregate abundance-based LRPs ranged from 15,395 to 24,331 spawners, depending on whether the required probability of all CUs being above Sgen was moderate (50%) or very likely (99%) (Table \@ref(tab:logisticLRPs2020)). LRPs increased across all probability levels when the carrying capacity was assumed higher under the Logistic:Sgen-priorCap model (Table \@ref(tab:logisticLRPs2020)). The higher $S_{gen}$ values for most CUs under this alternative model formulation resulted in more historical years in which < 100% of CUs were above $S_{gen}$. Several years with aggregate abundances between 19,000 - 30,000 spawners that had met the threshold of all CUs > $S_{gen}$ using the Ricker model no longer met this threshold, resulting in a shift of the fit curve to the right and higher LRP estimates. LRPs based on the Logistic:Sgen_priorCap model ranged from 25,677 to 40,637 spawners, depending on whether the required probability of all CUs being above Sgen was moderate (50%) or very likely (99%).  
+When the Logistic:Sgen-Ricker model was used, aggregate abundance-based LRPs ranged from  21,189 <!--was 15,395 --> to 35,737 <!-- was 24,331 --> spawners, depending on whether the required probability of all CUs being above Sgen was moderate (50%) or very likely (99%) (Table \@ref(tab:logisticLRPs2020)). LRPs increased across all probability levels when the carrying capacity was assumed higher under the Logistic:Sgen-priorCap model (Table \@ref(tab:logisticLRPs2020)). The higher $S_{gen}$ values for most CUs under this alternative model formulation resulted in more historical years in which < 100% of CUs were above $S_{gen}$, resulting in a shift of the logistic curve to the right (Figure \@ref(fig:coho-IM-logisticFit2020)). LRPs based on the Logistic:Sgen_priorCap model ranged from 23,245 to 39,200 spawners, depending on whether the required probability of all CUs being above Sgen was moderate (50%) or very likely (99%).  
 
 ```{r coho-IMCap-logisticFit2020, fig.cap="Logistic regression fit from the integrated Logistic:Sgen-priorCap LRP model using data from 1998 - 2020. See Figure 9 caption for additional details.", warning=FALSE, echo=FALSE, out.width = '50%', fig.align="center"}
 knitr::include_graphics("figure/coho-IMCap2020-LogisticLRP.png")
 ```
 
-When CU status was based on the IFCRT distributional target, the fit of the logistic curve was more gradual than the two Sgen models due to a greater overlap in 'successful' (all CUs > distributional target) and 'unsuccessful' (<100% of CUs above distributional target) years at low to moderate aggregate abundances.  In 3 of the 6 years with aggregate abundances below 20,000 spawners, the distributional target was not met for all CUs (Figure \@ref(fig:coho-Distr-logisticFit2020)). As a result, LRPs based on the IFCRT distributional target were more uncertain than those based on $S_{gen}$. LRPs based on this model also became increasingly large at high probability thresholds (Table \@ref(tab:logisticLRPs2020). The LRP based on a 99% probability was 44,403 spawners, with a 95% confidence interval extending from 15,102 - 73,703 spawners.  
+When CU status was based on the IFCRT distributional target, the fit of the logistic curve was more gradual than the two Sgen models due to a greater overlap in 'successful' (all CUs > distributional target) and 'unsuccessful' (<100% of CUs above distributional target) years at low to moderate aggregate abundances.  In 3 of the 6 years with aggregate abundances below 20,000 spawners, the distributional target was not met for all CUs (Figure \@ref(fig:coho-IM-logisticFit2020)). LRPs based on this model also became increasingly large at high probability thresholds (Table \@ref(tab:logisticLRPs2020). The LRP based on a 99% probability was 44,403 spawners, with a 95% confidence interval extending from 15,102 - 73,703 spawners.  
 
 ```{r coho-Distr-logisticFit2020, fig.cap="Logistic regression fit from the Logistic:IFCRT LRP model using data from 1998 - 2020. See Figure 9 caption for additional details.", warning=FALSE, echo=FALSE, out.width = '50%', fig.align="center"}
 knitr::include_graphics("figure/coho-ThreshAb2020-LogisticLRP.png")
@@ -283,47 +294,47 @@ knitr::include_graphics("figure/coho-ThreshAb2020-LogisticLRP.png")
 +---------------------+-----------------+-----------------+-----------------+
 | Probability         | Sgen-Ricker     | Sgen-priorCap   | IFCRT
 +=====================+=================+=================+=================+
-| 50%                 | 15,395          | 25,677          | 17,515
-| (As likely as not)  | (11,187-19,603) | (20,683-30,672) | (9,695-25,336)
+| 50%                 | 21,190          | 23,245          | 17,515
+| (As likely as not)  | (16,383-25,996) | (17,456-29,034) | (9,695-25,336)
 +---------------------+-----------------+-----------------+-----------------+             
-| 66%                 | 16,685          | 26,424          | 21,396
-| (Likely)            | (12,454-20,916) | (20,478-32,369) | (13,418-29,375)
+| 66%                 | 23,289          | 25,547          | 21,396
+| (Likely)            | (17,364-29,215) | (18,158-32,937) | (13,418-29,375)
 +---------------------+-----------------+-----------------+-----------------+  
-| 90%                 | 19,668          | 31,969          | 30,372
-| (Very likely)       | (13,752-25,584) | (21,414-42,523) | (15,711-45,033)
+| 90%                 | 28,145          | 30,874          | 30,372
+| (Very likely)       | (17,566-38,725) | (18,129-43,620) | (15,711-45,033)
 +---------------------+-----------------+-----------------+-----------------+
-| 99%                 | 24,331          | 40,637          | 44,403
-| (Virtually certain) | (13,924-34,738) | (21,288-59,936) | (15,102-73,703)
+| 99%                 | 35,737          | 39,200          | 44,403
+| (Virtually certain) | (16,525-54,949) | (16,922-61,479) | (15,102-73,703)
 +---------------------+-----------------+-----------------+-----------------+
 
 Table: (\#tab:logisticLRPs2020) Aggregate abundance based LRPs (with 95% confidence intervals) from three different logistic regression-based LRP models. For each probability level, the LRP estimate represents that probability that all CUs will be above their lower benchmark.  
 
 ***Logistic Regression Diagnostics***
 
-Logistic regression diagnostics showed  that key regression assumptions were met, and that model fits were strong enough to support estimation of logistic regression-based LRPs from all three models(Table \@ref(tab:logisticDiagIFC2020)). The assumptions of linearity and lack of large outliers were met for all models. The assumption of linearity was demonstrated based on the Box-Tidwell test. This test evaluates the significance of adding a non-linear interaction term to the logit regression. We found that this additional interaction term was not significant, supporting the linearity assumption. 
+Logistic regression diagnostics showed  that key regression assumptions were met, and that model fits were strong enough to support estimation of logistic regression-based LRPs from all three models (Table \@ref(tab:logisticDiagIFC2020)). The assumptions of linearity and lack of large outliers were met for all models. The assumption of linearity was demonstrated based on the Box-Tidwell test. This test evaluates the significance of adding a non-linear interaction term to the logit regression. We found that this additional interaction term was not significant, supporting the linearity assumption. 
 
-An examination of deviance residuals did not show any large outliers, i.e. no residual values were greater than 2. Observations were independent at all year lags examined for the Logistic:Sgen-priorCap and Logistic-IFCRT models. For the Logistic:Sgen-Ricker model, observations were independent at 1 and 2-year lags and marginally significant at a  3-year lag suggesting generational-scale trends (Figure \@ref(fig:coho-logisticACF-IM)). 
+An examination of deviance residuals did not show any large outliers, i.e. no residual values were greater than 2 for all three models. Observations were also found to be independent at all year lags examined for all three models. 
 
-The Wald Test showed that logistic model coefficient for aggregate abundance was marginally significant (p < 0.10). Psuedo-$R^2$ statistics indicated a moderately strong relationship between aggregate abundance and the probability of all CUs being above their lower benchmarks, and the goodness of fit statistics indicated a significant fit of the model with aggregate abundance relative to the null model based on p-values less than 0.01. Finally, 'out-of-sample' hit ratios representing classification accuracy as the proportion of successful predictions when one year of data was iteratively left out of the model fit, were relatively high at low probability thresholds, indicating good accuracy. This results was especially true for the Logistic:Sgen-Ricker model which had a hit ratio of 0.95 at probability thresholds of 50% and 66%. Classification accuracy was lowest for all models at the 99% probability threshold.
+The Wald Test showed that logistic model coefficient for aggregate abundance was marginally significant (p < 0.10). Psuedo-$R^2$ statistics indicated a moderately strong relationship between aggregate abundance and the probability of all CUs being above their lower benchmarks, and the goodness of fit statistics indicated a significant fit of the model with aggregate abundance relative to the null model based on p-values less than 0.01. Finally, 'out-of-sample' hit ratios representing classification accuracy as the proportion of successful predictions when one year of data was iteratively left out of the model fit, were relatively high at low probability thresholds, indicating good accuracy. This results was especially true for the Logistic:Sgen-Ricker model which had a hit ratio of 0.91 at probability thresholds of 50% and 66%. Classification accuracy was lowest for all models at the 99% probability threshold.
 <!--CH: this table and above text does not appear correctly on the knitted  pdf version. I'm not sure why. Also, I broke up the 1 pgh above into a few smaller ones; feel free to revise-->
 
 +-------------------------+--------------+-------------------+-----------------+
 | Diagnostic Test         | Sgen-Ricker  | Sgen-priorCap     | IFCRT
 +=========================+==============+===================+=================+
-| Box-Tidwell p-value     | 0.81         | 1.0               | 0.79
+| Box-Tidwell p-value     | 0.44         |    0.94           | 0.79
 +-------------------------+--------------+-------------------+-----------------+     
-| Max. deviance residual  | 1.52         | 1.68              | 1.66
+| Max. deviance residual  | 1.98         | 1.81              | 1.66
 +-------------------------+--------------+-------------------+-----------------+  
-| AR-1                    | -0.20        | 0.16              | 0.05
+| AR-1                    | -0.07        | 0.09              | 0.05
 +-------------------------+--------------+-------------------+-----------------+
-| Wald p-values           | 0.09^*       + 0.08^*            + 0.09^*
+| Wald p-values           | 0.07^*       + 0.06^*            + 0.09^*
 +-------------------------+--------------+-------------------+-----------------+
 | Goodness-of-fit p-value | <0.01        | <0.01             | <0.01
 +-------------------------+--------------+-------------------+-----------------+
-| Pseudo-$R^2$             | 0.68         | 0.63              | 0.41
+| Pseudo-$R^2$            | 0.60         | 0.61              | 0.40
 +-------------------------+--------------+-------------------+-----------------+
-| Hit Ratio (p= 50%,      | 0.91, 0.91   | 0.87, 0.91,       | 0.76, 0.81,
-| 60%, 90%, 99%)          | 0.91, 0.74   | 0.87, 0.78        | 0.76, 0.52
+| Hit Ratio (p= 50%,      | 0.91, 0.83   | 0.87, 0.87,       | 0.76, 0.81,
+| 66%, 90%, 99%)          | 0.78, 0.74   | 0.87, 0.74        | 0.76, 0.52
 +-------------------------+--------------+-------------------+-----------------+
 
 Table: (\#tab:logisticDiagIFC2020) Model diagnostic statistics from Sgen:LRP, Sgen_priorCap:LRP, and Dist-LRP model fits. A description of diagnostic tests is provided in Section 2. Hit ratios are shown for all four probability thresholds considered.  The symbol '*' indicates a result that only marginally met the recommended criteria for demonstrating good model fit.  
@@ -336,7 +347,7 @@ knitr::include_graphics("figure/coho-logisticFitDiag-2020acf.png")
 ```  
 
 
-Sample sizes were small due to the short time series available for Interior Fraser Coho; only 23 years of observations were available to fit logistic regression models. @peduzziSimulationStudyNumber1996 recommend a minimum requirement of 10 data points for the least frequent outcome based on their simulation studies in the field of clinical epidemiology. In our case, the least frequent outcome was the failure of all CUs to be above their benchmarks (i.e., 0). We were not able to make this minimum requirement for any of our model fits; we had only 3, 9, and 5 data points at the least frequent outcome for the Logistic:Sgen-Ricker, Logistic:Sgen-priorCap, and Logistic-IFCRT models, respectively.  Based on the current ratio of successes and fails in the data, the estimated minimum sample sizes that would be required to meet the criteria of @peduzziSimulationStudyNumber1996 ranged from 26 to 77 years. However, despite small sample sizes, hit ratios are high for all models at p = 50%.  As a result, we suggest that logistic regression-based LRPs may still be useful for this SMU.  We proceeded with retrospective analyses in order to examine how sensitive LRPs based on these model fits were to variations in the level of available data.
+Sample sizes were small due to the short time series available for Interior Fraser Coho; only 23 years of observations were available to fit logistic regression models. @peduzziSimulationStudyNumber1996 recommend a minimum requirement of 10 data points for the least frequent outcome based on their simulation studies in the field of clinical epidemiology. In our case, the least frequent outcome was the failure of all CUs to be above their benchmarks (i.e., 0). We were not able to make this minimum requirement for any of our model fits; we had only 7, 8, and 5 data points at the least frequent outcome for the Logistic:Sgen-Ricker, Logistic:Sgen-priorCap, and Logistic-IFCRT models, respectively. <!--CW: need to confirm with Kendra where are these numbers calculated Based on the current ratio of successes and fails in the data, the estimated minimum sample sizes that would be required to meet the criteria of @peduzziSimulationStudyNumber1996 ranged from 26 to 77 years.--> However, despite small sample sizes, hit ratios are high for all models at p = 50%.  As a result, we suggest that logistic regression-based LRPs may still be useful for this SMU.  We proceeded with retrospective analyses in order to examine how sensitive LRPs based on these model fits were to variations in the level of available data.
 
 ***Retrospective Analysis***
 
